RESOLVED FIXED178761
ServiceWorkerClientFetch should return an error that is not null in case of failure
https://bugs.webkit.org/show_bug.cgi?id=178761
Summary ServiceWorkerClientFetch should return an error that is not null in case of f...
youenn fablet
Reported 2017-10-24 16:26:21 PDT
ServiceWorkerClientFetch should return an error that is not null in case of failure
Attachments
Patch (4.71 KB, patch)
2017-10-24 16:35 PDT, youenn fablet
no flags
Patch (4.85 KB, patch)
2017-10-24 16:47 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-10-24 16:35:10 PDT
youenn fablet
Comment 2 2017-10-24 16:47:52 PDT
Geoffrey Garen
Comment 3 2017-10-24 16:49:12 PDT
Comment on attachment 324756 [details] Patch r=me
Geoffrey Garen
Comment 4 2017-10-24 16:49:28 PDT
Can we add a test for this now that we have hello world?
youenn fablet
Comment 5 2017-10-24 17:12:43 PDT
(In reply to Geoffrey Garen from comment #4) > Can we add a test for this now that we have hello world? Thanks for the review. The change is covered by basic-registration.html. The change to make use of ResourceError::Type::General makes basic-registration.html to fail. By fixing WorkerScriptLoader to not use service worker, we are back to the usual way.
WebKit Commit Bot
Comment 6 2017-10-24 17:47:30 PDT
Comment on attachment 324756 [details] Patch Clearing flags on attachment: 324756 Committed r223944: <https://trac.webkit.org/changeset/223944>
WebKit Commit Bot
Comment 7 2017-10-24 17:47:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2017-11-15 12:50:04 PST
Note You need to log in before you can comment on or make changes to this bug.