Source/WebCore/workers/service/ServiceWorkerJob.h
@@ -69,6 +69,8 @@ private:
     // WorkerScriptLoaderClient
     void didReceiveResponse(unsigned long identifier, const ResourceResponse&) final;
     void notifyFinished() final;
+    bool isServiceWorkerClient() const final { return true; }
+
 
     Ref<ServiceWorkerJobClient> m_client;
     ServiceWorkerJobData m_jobData;
